--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/byxm/javascript-design-model#readme",
   "dependencies": {
+    "@types/node": "^13.1.4",
     "express": "^4.17.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.1",
